# htp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/htmltableparser/: __init__.py
src/htp/: __init__.py
tests/htmltableparser/: HTMLTableParserTest.py
tests/htp/: HTMLTableParserTest.py
